Removed individual tea wishlist button and converted vote buttons it link tags

--- a/css/style-voting.css
+++ b/css/style-voting.css
@@ -167,8 +167,12 @@ h4 {
      text-align: center;
 }
 
-.tile-voting button {
-     width: 40%;
+.vote-button {
+     border: 1px solid black;
+     border-radius: 5px;
+     height: 35px;
+     font-size: .9em;
+     background-color: #eeeeee;
 }
 
 .tea-info {
@@ -195,11 +199,6 @@ h4 {
 .counts {
      color: #838383;
      font-size: .8em;
-}
-
-.vote {
-     height: 40px;
-     font-size: .9em;
 }
 
 .voted {
