--- a/css/style-voting.css
+++ b/css/style-voting.css
@@ -179,13 +179,13 @@ h4 {
 .vote-button {
      border: 1px solid black;
      border-radius: 5px;
-     padding: 2%;
-     width: 50%;
+     padding: 1%;
+     width: 60%;
      font-size: .9em;
      background-color: #eeeeee;
-     display: inline-block;
+     display: block;
      text-align: center;
-     margin: 2% 2% 0 2%;
+     margin: 2% auto;
 }
 
 .tea-info {
